fix horionatl scroll issue on app wrappper in mobile

--- a/src/styles/cards/infoCard.css
+++ b/src/styles/cards/infoCard.css
@@ -9,13 +9,13 @@
   margin-top: 32px;
   display: flex;
   flex-direction: row;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   /* used to place the card in the users view when the menu item on the left is clicked  */
   scroll-margin-top: var(--case-study-scroll-margin-top);
 }
 /* seperates the last card from the bottom of the screen */
 .info-card:last-child {
-  margin-bottom: 40vh;
+  margin-bottom: 10vh;
 }
 .info-card-col1 {
   margin-right: 1.75rem;
@@ -83,8 +83,8 @@
     max-height: 30px;
   }
 }
-@media (min-width: 1200px) {
+/* @media (min-width: 1200px) {
   .info-card {
     padding: 5rem;
   }
-}
+} */
