--- a/src/styles/caseStudyDetailPage.css
+++ b/src/styles/caseStudyDetailPage.css
@@ -238,7 +238,7 @@
   .case-study-detail-layout {
     display: flex; /* stack everything */
     flex-direction: column;
-    max-width: 100%;
+    max-width: 100vw;
   }
   .case-study-header {
     padding: 0.5rem;
