--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -126,12 +126,16 @@ html[data-theme="dark"] {
   display: flex;
   flex-direction: column;
   min-height: 100vh; /* Ensures footer stays at the bottom */
+  max-width: 100vw;
+  overflow-x: hidden; /* gets rid of weird horizontal scroll */
 }
 
 /* Apply semantic colors to the document */
 html,
 body {
   height: 100%;
+  width: 100%;
+  overflow-x: hidden;
 }
 body {
   margin: 0;
