--- a/src/styles/sections/hero.css
+++ b/src/styles/sections/hero.css
@@ -3,6 +3,7 @@
   flex-direction: row;
   max-width: 100%;
   margin: auto;
+  border: 2px solid purple;
 }
 
 .hero-left {
@@ -64,7 +65,7 @@
   .hero {
     flex-direction: column-reverse;
     padding-bottom: 0;
-    background-size: 100% 100%;
+    /* background-size: 100% 100%; */
   }
   .hero-right,
   .hero-left {
